WikimediaUI theme: Ensure icon aligns in dropdown menu
Ensuring icon alignment in DropdownWidget and also don't let label and
indicator visually collide.

Bug: T163104

--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -527,10 +527,10 @@
 	}
 
 	&.oo-ui-iconElement {
-		padding-left: @padding-start-input-text-icon-label;
+		padding-left: @padding-start-menu-icon-label;
 
 		.oo-ui-iconElement-icon {
-			left: @padding-start-input-text-icon;
+			left: @padding-horizontal-default;
 		}
 	}
 
@@ -539,7 +539,7 @@
 	}
 
 	&.oo-ui-indicatorElement {
-		padding-right: @size-indicator + @padding-horizontal-default;
+		padding-right: @padding-start-indicator-plus;
 
 		.oo-ui-indicatorElement-indicator {
 			right: @padding-horizontal-default;
